// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentModel getChildren 1`] = `
Immutable.List [
  Immutable.Map {
    "post_id": 170,
    "id": "2e29",
    "parent_id": "6ffb",
    "position": 0,
    "type": "p",
    "content": "Paragraph with no formats",
    "meta": Immutable.Map {},
  },
  Immutable.Map {
    "post_id": 170,
    "id": "4472",
    "parent_id": "6ffb",
    "position": 1,
    "type": "p",
    "content": "Paragraph with some formats",
    "meta": Immutable.Map {
      "selections": Immutable.List [
        Immutable.Record {
          "start": 0,
          "end": 10,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 10,
          "end": 14,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": true,
          "linkUrl": "http://some.site",
        },
        Immutable.Record {
          "start": 14,
          "end": 15,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 15,
          "end": 19,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 19,
          "end": 20,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 20,
          "end": 27,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": true,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
      ],
    },
  },
]
`;

exports[`DocumentModel getFirstChild 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "2e29",
  "parent_id": "6ffb",
  "position": 0,
  "type": "p",
  "content": "Paragraph with no formats",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel getLastChild 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "4472",
  "parent_id": "6ffb",
  "position": 1,
  "type": "p",
  "content": "Paragraph with some formats",
  "meta": Immutable.Map {
    "selections": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 10,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-strikethrough": false,
        "selection-siteinfo": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 10,
        "end": 14,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-strikethrough": false,
        "selection-siteinfo": false,
        "selection-link": true,
        "linkUrl": "http://some.site",
      },
      Immutable.Record {
        "start": 14,
        "end": 15,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-strikethrough": false,
        "selection-siteinfo": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 15,
        "end": 19,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-strikethrough": false,
        "selection-siteinfo": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 19,
        "end": 20,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-strikethrough": false,
        "selection-siteinfo": false,
        "selection-link": false,
        "linkUrl": "",
      },
      Immutable.Record {
        "start": 20,
        "end": 27,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-strikethrough": true,
        "selection-siteinfo": false,
        "selection-link": false,
        "linkUrl": "",
      },
    ],
  },
}
`;

exports[`DocumentModel getNextFocusNodeId 1`] = `"33fc"`;

exports[`DocumentModel getNextFocusNodeId 2`] = `"2e29"`;

exports[`DocumentModel getNextFocusNodeId 3`] = `"4472"`;

exports[`DocumentModel getNextFocusNodeId 4`] = `"7d65"`;

exports[`DocumentModel getNextFocusNodeId 5`] = `"098b"`;

exports[`DocumentModel getNextSibling 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "fed1",
  "parent_id": "7c74",
  "position": 0,
  "type": "p",
  "content": "Another paragraph no formats",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel getNode 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "098a",
  "parent_id": "eea2",
  "position": 1,
  "type": "li",
  "content": "Some other item here",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel getPrevSibling 1`] = `Immutable.Map {}`;

exports[`DocumentModel getPreviousFocusNodeId 1`] = `"7518"`;

exports[`DocumentModel getPreviousFocusNodeId 2`] = `"7518"`;

exports[`DocumentModel getPreviousFocusNodeId 3`] = `"4472"`;

exports[`DocumentModel getPreviousFocusNodeId 4`] = `"2e29"`;

exports[`DocumentModel getPreviousFocusNodeId 5`] = `"21f3"`;

exports[`DocumentModel getSection 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "7c74",
  "parent_id": "60dc",
  "position": 4,
  "type": "content",
  "content": "",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel getSection 2`] = `
Immutable.Map {
  "post_id": 170,
  "id": "59cc",
  "parent_id": "60dc",
  "position": 5,
  "type": "codesection",
  "content": "",
  "meta": Immutable.Map {
    "lines": Immutable.List [
      "var heresACodeSection = true;",
      "function longRead() {",
      "  return someLongText",
      "}",
    ],
  },
}
`;

exports[`DocumentModel init 1`] = `
DocumentModel {
  "infiniteLoopCount": 0,
  "nodesByParentId": Immutable.Map {
    "null": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "60dc",
        "parent_id": null,
        "position": 0,
        "type": "root",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
    "7c74": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "fed1",
        "parent_id": "7c74",
        "position": 0,
        "type": "p",
        "content": "Another paragraph no formats",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "eea2",
        "parent_id": "7c74",
        "position": 1,
        "type": "ol",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "eea1",
        "parent_id": "7c74",
        "position": 2,
        "type": "ol",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
    "6ffb": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "2e29",
        "parent_id": "6ffb",
        "position": 0,
        "type": "p",
        "content": "Paragraph with no formats",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "4472",
        "parent_id": "6ffb",
        "position": 1,
        "type": "p",
        "content": "Paragraph with some formats",
        "meta": Immutable.Map {
          "selections": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 10,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 10,
              "end": 14,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": true,
              "linkUrl": "http://some.site",
            },
            Immutable.Record {
              "start": 14,
              "end": 15,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 15,
              "end": 19,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 19,
              "end": 20,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 20,
              "end": 27,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": true,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
          ],
        },
      },
    ],
    "eea1": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "4807",
        "parent_id": "eea1",
        "position": 0,
        "type": "li",
        "content": "List 2 several items",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "098b",
        "parent_id": "eea1",
        "position": 1,
        "type": "li",
        "content": "List 2 another item here",
        "meta": Immutable.Map {},
      },
    ],
    "78d3": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "420f",
        "parent_id": "78d3",
        "position": 0,
        "type": "p",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
    "eea2": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "4808",
        "parent_id": "eea2",
        "position": 0,
        "type": "li",
        "content": "A list of several items",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "098a",
        "parent_id": "eea2",
        "position": 1,
        "type": "li",
        "content": "Some other item here",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "4b8c",
        "parent_id": "eea2",
        "position": 2,
        "type": "li",
        "content": "This one has a bunch of formats",
        "meta": Immutable.Map {
          "selections": Immutable.List [
            Immutable.Record {
              "start": 0,
              "end": 5,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 5,
              "end": 8,
              "selection-bold": true,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 8,
              "end": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 9,
              "end": 12,
              "selection-bold": false,
              "selection-italic": true,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 12,
              "end": 13,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 13,
              "end": 14,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 14,
              "end": 15,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 15,
              "end": 20,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": true,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 20,
              "end": 21,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 21,
              "end": 23,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": true,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 23,
              "end": 24,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": false,
              "linkUrl": "",
            },
            Immutable.Record {
              "start": 24,
              "end": 31,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-strikethrough": false,
              "selection-siteinfo": false,
              "selection-link": true,
              "linkUrl": "http://some.site",
            },
          ],
        },
      },
    ],
    "60dc": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "7518",
        "parent_id": "60dc",
        "position": 0,
        "type": "h1",
        "content": "Large Heading",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "6ffb",
        "parent_id": "60dc",
        "position": 1,
        "type": "content",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "4147",
        "parent_id": "60dc",
        "position": 2,
        "type": "spacer",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "7d65",
        "parent_id": "60dc",
        "position": 3,
        "type": "h2",
        "content": "Small Heading",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "7c74",
        "parent_id": "60dc",
        "position": 4,
        "type": "content",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "59cc",
        "parent_id": "60dc",
        "position": 5,
        "type": "codesection",
        "content": "",
        "meta": Immutable.Map {
          "lines": Immutable.List [
            "var heresACodeSection = true;",
            "function longRead() {",
            "  return someLongText",
            "}",
          ],
        },
      },
      Immutable.Map {
        "post_id": 170,
        "id": "5060",
        "parent_id": "60dc",
        "position": 6,
        "type": "spacer",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "8b4f",
        "parent_id": "60dc",
        "position": 7,
        "type": "content",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "aa69",
        "parent_id": "60dc",
        "position": 8,
        "type": "image",
        "content": "",
        "meta": Immutable.Map {
          "url": "e7ee13c234d5b7f6fcd5bdfb5fdbd5d7ac25f4b417a37f23b4cb1a8ae4a279f1",
          "width": 681,
          "height": 1000,
          "caption": "Kinzua Dam '91",
          "rotationDegrees": 90,
        },
      },
      Immutable.Map {
        "post_id": 170,
        "id": "78d3",
        "parent_id": "60dc",
        "position": 9,
        "type": "content",
        "content": "",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "post_id": 170,
        "id": "e108",
        "parent_id": "60dc",
        "position": 10,
        "type": "quote",
        "content": "",
        "meta": Immutable.Map {
          "url": "https://www.theguardian.com/theguardian/2007/sep/13/greatinterviews",
          "quote": "It's an attempt to bring the figurative thing up on to the nervous system more violently and more poignantly.",
          "author": "Frances Bacon",
          "context": "interviews with David Sylvester in 1963, 1966 and 1979",
        },
      },
      Immutable.Map {
        "post_id": 170,
        "id": "98db",
        "parent_id": "60dc",
        "position": 11,
        "type": "content",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
    "8b4f": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "21f3",
        "parent_id": "8b4f",
        "position": 0,
        "type": "p",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
    "98db": Immutable.List [
      Immutable.Map {
        "post_id": 170,
        "id": "33fc",
        "parent_id": "98db",
        "position": 0,
        "type": "p",
        "content": "",
        "meta": Immutable.Map {},
      },
    ],
  },
  "post": Immutable.Map {
    "abstract": null,
    "created": "2019-11-28T22:10:15.000Z",
    "published": null,
    "user_id": 1,
    "canonical": "large-heading-d1aa",
    "title": "Large Heading",
    "deleted": null,
    "updated": "2019-11-28T22:10:15.000Z",
    "id": 170,
  },
  "root": Immutable.Map {
    "post_id": 170,
    "id": "60dc",
    "parent_id": null,
    "position": 0,
    "type": "root",
    "content": "",
    "meta": Immutable.Map {},
  },
  "rootId": "60dc",
  "updateManager": Object {
    "nodeHasBeenStagedForDelete": [MockFunction],
    "stageNodeDelete": [MockFunction],
    "stageNodeUpdate": [MockFunction],
  },
}
`;

exports[`DocumentModel insertSection 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "7518",
  "parent_id": "60dc",
  "position": 0,
  "type": "h1",
  "content": "Large Heading",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel insertSection 2`] = `
Immutable.Map {
  "post_id": 170,
  "id": "6ffb",
  "parent_id": "60dc",
  "position": 2,
  "type": "content",
  "content": "",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel insertSectionAfter 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "4147",
  "parent_id": "60dc",
  "position": 3,
  "type": "spacer",
  "content": "",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel insertSectionBefore 1`] = `
Immutable.Map {
  "post_id": 170,
  "id": "7d65",
  "parent_id": "60dc",
  "position": 3,
  "type": "h2",
  "content": "Small Heading",
  "meta": Immutable.Map {},
}
`;

exports[`DocumentModel mergeSections 1`] = `
Immutable.List [
  Immutable.Map {
    "post_id": 170,
    "id": "21f3",
    "parent_id": "8b4f",
    "position": 0,
    "type": "p",
    "content": "",
    "meta": Immutable.Map {},
  },
  Immutable.Map {
    "post_id": 170,
    "id": "33fc",
    "parent_id": "8b4f",
    "position": 1,
    "type": "p",
    "content": "",
    "meta": Immutable.Map {},
  },
]
`;

exports[`DocumentModel mergeSections 2`] = `
Immutable.List [
  Immutable.Map {
    "post_id": 170,
    "id": "4808",
    "parent_id": "eea2",
    "position": 0,
    "type": "li",
    "content": "A list of several items",
    "meta": Immutable.Map {},
  },
  Immutable.Map {
    "post_id": 170,
    "id": "098a",
    "parent_id": "eea2",
    "position": 1,
    "type": "li",
    "content": "Some other item here",
    "meta": Immutable.Map {},
  },
  Immutable.Map {
    "post_id": 170,
    "id": "4b8c",
    "parent_id": "eea2",
    "position": 2,
    "type": "li",
    "content": "This one has a bunch of formats",
    "meta": Immutable.Map {
      "selections": Immutable.List [
        Immutable.Record {
          "start": 0,
          "end": 5,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 5,
          "end": 8,
          "selection-bold": true,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 8,
          "end": 9,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 9,
          "end": 12,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 12,
          "end": 13,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 13,
          "end": 14,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 14,
          "end": 15,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 15,
          "end": 20,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": true,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 20,
          "end": 21,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 21,
          "end": 23,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": true,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 23,
          "end": 24,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": false,
          "linkUrl": "",
        },
        Immutable.Record {
          "start": 24,
          "end": 31,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-strikethrough": false,
          "selection-siteinfo": false,
          "selection-link": true,
          "linkUrl": "http://some.site",
        },
      ],
    },
  },
  Immutable.Map {
    "post_id": 170,
    "id": "4807",
    "parent_id": "eea2",
    "position": 3,
    "type": "li",
    "content": "List 2 several items",
    "meta": Immutable.Map {},
  },
  Immutable.Map {
    "post_id": 170,
    "id": "098b",
    "parent_id": "eea2",
    "position": 4,
    "type": "li",
    "content": "List 2 another item here",
    "meta": Immutable.Map {},
  },
]
`;

exports[`DocumentModel splitSection 1`] = `
Immutable.List [
  Immutable.Map {
    "post_id": 170,
    "id": "2e29",
    "parent_id": "6ffb",
    "position": 0,
    "type": "p",
    "content": "Paragraph with no formats",
    "meta": Immutable.Map {},
  },
]
`;
